--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -127,3 +127,25 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .adImageContainer {
+        height: 400px !important;
+    }
+
+    .sellerContainer {
+        height: 150px;
+    }
+
+    #actions {
+        text-align: center !important;
+
+        .action {
+            margin: 0 30px 20px 30px !important;
+        }
+    }
+
+    .detailsHeading {
+        padding-top: 30px !important;
+    }
+}
